# RUST-HYSTERIA

./: Cargo.toml  README.md
app/: Cargo.toml
app/src/: cli.rs  config.rs  http_proxy.rs  main.rs  share.rs  socks5.rs  speedtest.rs  udp_bench.rs  udp_forwarding.rs
core/: Cargo.toml
core/src/: android.rs  client.rs  errors.rs  frag.rs  health.rs  lib.rs  limit.rs  quic.rs  relay.rs  runtime_io.rs  server.rs  socket.rs  stream.rs  udp.rs  varint.rs
core/src/protocol/: auth.rs  mod.rs  padding.rs  proxy.rs
core/tests/: frag.rs  protocol.rs  runtime.rs
docs/: throughput.md  wireguard-forwarding.md
examples/wireguard/: client.yaml  exported-client.yaml  wg0.conf
extras/: Cargo.toml
extras/src/: lib.rs  obfs.rs  speedtest.rs
extras/tests/: salamander.rs  speedtest.rs
mobile/: Cargo.toml  Dioxus.toml  README.md
mobile/android/: AndroidManifest.xml  MainActivity.kt
mobile/scripts/: android-debug-build.sh  android-h3-smoke.sh  android-push-ca.sh
mobile/scripts/tests/: android-h3-smoke-test.sh
mobile/src/: android_bridge.rs  dns_proxy.rs  local_socks.rs  main.rs  vpn_tun2socks.rs
