[workspace]
members = ["app", "core", "extras"]
resolver = "3"

[workspace.package]
edition = "2024"
license = "MIT"
version = "0.1.0"

[workspace.dependencies]
bytes = "=1.11.1"
blake2 = "=0.10.6"
clap = { version = "=4.5.60", features = ["derive", "env"] }
h3 = "=0.0.8"
h3-quinn = "=0.0.10"
http = "=1.4.0"
quinn = { version = "=0.11.9", default-features = false, features = ["runtime-tokio", "rustls-ring", "futures-io"] }
quinn-proto = "=0.11.14"
rand = "=0.9.2"
rustls = { version = "=0.23.37", default-features = false, features = ["ring", "std"] }
rustls-pemfile = "=1.0.4"
sha2 = "=0.10.9"
socket2 = "=0.5.10"
thiserror = "=2.0.18"
tokio = { version = "=1.50.0", features = ["io-util", "macros", "net", "rt", "rt-multi-thread", "sync", "time"] }
