[package]
name = "hysteria-app"
edition.workspace = true
license.workspace = true
version.workspace = true

[[bin]]
name = "hysteria"
path = "src/main.rs"

[dependencies]
anyhow = "1.0"
base64 = "0.22"
clap.workspace = true
dirs = "6.0"
hysteria-core = { path = "../core" }
hysteria-extras = { path = "../extras" }
http.workspace = true
humantime = "2.3"
humantime-serde = "1.1"
qrcode = "0.14"
rustls.workspace = true
rustls-native-certs = "=0.8.3"
rustls-pemfile.workspace = true
serde = { version = "1.0", features = ["derive"] }
serde_yaml = "0.9"
socket2.workspace = true
tokio = { workspace = true, features = ["signal"] }
url = "2.5"

[dev-dependencies]
rcgen = "0.13.2"
tempfile = "3.23"
